# one-more-run

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  pyproject.toml  research.md
.github/workflows/: test.yml  worker-image.yml
demo/: README.md  experiments.jsonl
deploy/: akash-pomerium.yaml  akash.yaml
docs/: architecture.md  demo.md  devpost.md
docs/submission/: README.md  carousel.md  carousel_cli.py  design-agent-handoff.md  design-system.md  devpost.md  integration-review.md  judging.md  linkedin.md
examples/: akash_adapter.py  demo_adapter.py
examples/code_candidate/: features.py  model.py  train.py
src/one_more_run/: __init__.py  __main__.py  akash.py  akash_adapter.py  cli.py  code_runner.py  codex_adapter.py  hindsight.py  pomerium.py  protocol.py  settings.py  theme.py  worker.py
tests/: test_akash.py  test_akash_adapter.py  test_campaign.py  test_codex_adapter.py  test_hindsight.py  test_pomerium.py  test_protocol.py  test_settings.py  test_worker.py
